# PlainChanges2

./: .ghci  .gitignore  Changes.hs  Coil.hs  LICENSE  MechBass.hs  Notes  PartI.hs  PartIII.hs  PlainChanges2.hs  README.md  SimplePeal.hs  coilAndBass.pd  plainchanges2.cabal  tesla-coil-voice.pd  testcoil.pd
doc/: Building.md  Instrumentation.md  MIDI.md  Performance.md
src/: Changes.hs  Coil.hs  Elements.hs  FindSkews.hs  Main.hs  MechBass.hs  MechBassAllocator.hs  MidiUtil.hs  PartI.hs  PartII.hs  PartIII.hs  PlainChanges2.hs  Play.hs  Preamble.hs  SimplePeal.hs  Tests.hs  Visual.hs  VolumeTest.hs
src/Sound/: MidiPlayer.hs
